Add Sandboxed API library target, no uses yet
Signed-off-by: Christian Blichmann <cblichmann@google.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,16 @@ add_subdirectory("${SAPI_ROOT}"
                  "${CMAKE_BINARY_DIR}/sandboxed-api-build"
                  # Omit this to have the full Sandboxed API in IDE
                  EXCLUDE_FROM_ALL)
+
+add_sapi_library(rot13_sapi
+  FUNCTIONS Rot13File  # List of functions that we want to include in the
+                       # generated sandboxed API class
+  INPUTS rot13.h       # Header files or .cc files that should be parsed
+  LIBRARY rot13        # Library dependency from the add_library() above
+  LIBRARY_NAME Rot13   # Name prefix for the generated header. Will be
+                       # suffixed with "Api" and "Sandbox" as needed.
+  NAMESPACE ""         # Optional C++ namespace to wrap the generated code
+)
+target_include_directories(rot13_sapi INTERFACE
+  "${PROJECT_BINARY_DIR}"  # To find the generated SAPI header
+)
