Implement a simple main() to call into sandboxed library
We're now all set up, but it will not work just yet.

Try adding `--sandbox2_danger_danger_permit_all` and see what happens.
Why does this still fail?
(Hint: namespaces)

Signed-off-by: Christian Blichmann <cblichmann@google.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,11 @@ add_sapi_library(rot13_sapi
 target_include_directories(rot13_sapi INTERFACE
   "${PROJECT_BINARY_DIR}"  # To find the generated SAPI header
 )
+
+add_executable(rot13_sandboxed
+  main_sandboxed.cc
+)
+target_link_libraries(rot13_sandboxed PRIVATE
+  rot13_sapi
+  sapi::sapi
+)
