Update code to latest Sandboxed API changes
- Disable bzlmod for now, SAPI does not yet use it
- Use Abseil flags instead of relying on forwarded gflags from SAPI
- Add calls to the macros that declare transitive dependencies
- Disable LLVM optional deps, this example does not use the clang based
  header generator

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,5 @@
+# Migration to Bzlmod is not ready yet
+common --noenable_bzlmod
+
 # Build in C++17 mode without a custom CROSSTOOL
-build --cxxopt=-std=c++17
+build --cxxopt=-std=c++17 --host_cxxopt=-std=c++17
